2000-11-14  Havoc Pennington  <hp@pobox.com>

	* gtk/testtextbuffer.c (fill_buffer): change "offset" to "rise"

	* gtk/gtktexttypes.h (GTK_TEXT_UNKNOWN_CHAR): Add macro for
	unknown char, no real reason we were using a variable. 
	Remove gtk_text_unknown_char variable. Fix all the text widget
	files accordingly.

	* gtk/gtktexttypes.c: Change "unknown character" to 0xFFFC, 
	since the Unicode spec seems to prefer that character for our
	purposes.

Wed Nov 15 02:18:01 2000  Robert Brady  <robert@suse.co.uk>

	* gtk/gtkrc.c (gtk_rc_get_im_module_file): The return 
	value of g_getenv() isn't freeable, so g_strdup it.

	* modules/input/inuktitut.c: Inuktitut input method.

	* modules/input/Makefile.am: Build this.
	
2000-11-14  Elliot Lee  <sopwith@redhat.com>

	* gtk/Makefile.am: Install gtk.immodules, needed for operation
	of gtk programs.

Tue Nov 14 20:13:06 2000  Owen Taylor  <otaylor@redhat.com>

	* gtk/gtktextlayout.c (gtk_text_layout_move_iter_to_line_end): Fix
	reversed > that was causing Home to go to end of previous line.

	* gtk/gtkimcontextsimple.c (gtk_im_context_simple_filter_keypress): Ignore
	modified-keypresses (leave for bindings.)

	* modules/input/Makefile.am: Remove useless -export-dynamic
	from module LDFLAGS.

2000-11-14  Havoc Pennington  <hp@redhat.com>

	* gdk/gdkpango.c (gdk_draw_layout_line): Draw underlines one pixel
	higher.

	* gtk/gtktextdisplay.c (render_layout_line): Take rise into
	account. Also, render rise, underline, background, etc. for
	pixbufs as well as text. Also, draw underlines one pixel higher.

	* gtk/gtktextlayout.c (gtk_text_layout_get_line_display): Add a
	PangoAttribute for the rise, so it gets drawn properly. Also,
	add the GtkTextAppearance attribute for pixbuf/widget segments
	as well; we should go ahead and have rise, underline, background,
	stipple work for those

	* gtk/gtktexttag.c: Rename "offset" property to "rise" to match
	Pango

2000-11-15  Tor Lillqvist  <tml@iki.fi>
